# fastslide

./: meson.build
src/cpp/: fastslide.cpp  fastslide.h
